Gradle build file update

--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ minecraft {
             // "REGISTRIES": For firing of registry events.
             // "REGISTRYDUMP": For getting the contents of all registries.
             property 'forge.logging.markers', 'REGISTRIES'
-            args '--username', 'voordinee'
+            args '--username', 'voordine'
 
             // Recommended logging level for the console
             // You can set various levels here.
